@@ -2,6 +2,9 @@
 # Average over an arbitrary period...
 rrdtool graph /dev/null -f "" -s now-30d -e now DEF:in=../rra/atm-sl_traffic_in_5498.rrd:traffic_in:AVERAGE DEF:out=../rra/atm-sl_traffic_in_5498.rrd:traffic_out:AVERAGE VDEF:avg_in=in,AVERAGE VDEF:avg_out=out,AVERAGE PRINT:avg_in:%lf PRINT:avg_out:%lf
 
+warning for BWLABELPOS when in<out
+add SET nowarn_xxxxx for some of the more common warnings
+
 Before 0.96
 -----------
 DONE Check for NULL coords in link code
