@@ -1,5 +1,11 @@
 # Automatically generated by php-weathermap v0.95b
 
+SET nowarn_scalemisses 1
+SET nowarn_clipping 1
+SET rrd_default_in_ds traffic_in
+SET rrd_default_out_ds traffic_out
+SET nowarn_bwlabelpos 1
+
 FONTDEFINE 10 Vera.ttf 8
 FONTDEFINE 12 Vera.ttf 6
 FONTDEFINE 20 VeraIt.ttf 8
@@ -60,6 +66,7 @@ LINK DEFAULT
 	WIDTH 4
 	BWFONT 20
 	COMMENTFONT 20
+	BWLABELPOS 25 75
 	OUTLINECOLOR none
 	COMMENTFONTCOLOR 0 0 0
 	BWLABEL bits
